# fulltext

./: .gitignore  Cargo.toml  onedoc.xml
src/: main.rs  main_dashmap.rs  main_parse_split.rs  main_parse_split_dashmap.rs  main_set.rs  main_vec.rs
src/indexers/: mod.rs  rayon_indexer.rs  threadpool_indexer.rs
