[package]
name = "fulltext"
version = "0.1.0"
authors = ["hoode"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rust-stemmers = "1.2.0"
clap = "^2.33.2"
xmlparser = "^0.13.2"
num_cpus = "^1.13.0"
crossbeam = "^0.7.3"
dashmap = "^3.11.10"
rayon = "^1.3.1"
hashers = "^1.0.1"
flexbuffers = "0.2.1"
memmap = "0.7.0"
bincode = "1.3.1"
rmp-serde = "0.15.1"